objects/Time_Tracker__c.object
<CustomObject>
    <description>used to track time against projects</description>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>use the lookup to find your name in the SFDC system</inlineHelpText>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Log</label>
        <referenceTo>Time_Log__c</referenceTo>
        <relationshipLabel>Time Trackers</relationshipLabel>
        <relationshipName>Time_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <inlineHelpText>enter 1 hour 15 minutes as 1.25</inlineHelpText>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Notes__c</fullName>
        <label>Work Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Related_To__c</fullName>
        <label>Work Related To</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Tracker</label>
    <nameField>
        <displayFormat>TT-{000000}</displayFormat>
        <label>Time Tracker #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>